k8s/laravel-php-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-php
  namespace: laravel-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laravel-php
  template:
    metadata:
      labels:
        app: laravel-php
    spec:
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
      containers:
        - name: laravel-php
          image: itzmazeen/laravel-php:674d2211
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
          readinessProbe:
            exec:
              command: ["php", "/var/www/laravel/artisan", "--version"]
            initialDelaySeconds: 10
            periodSeconds: 5
          volumeMounts:
            - name: azure-storage
              mountPath: /var/www/laravel/storage/app/public
          lifecycle:
            postStart:
              exec:
                command: ["php", "/var/www/laravel/artisan", "storage:link"]
      volumes:
        - name: azure-storage
          persistentVolumeClaim:
            claimName: azurefile-pvc
