k8s/laravel-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-nginx
  namespace: laravel-app
spec:
  selector:
    app: laravel-nginx
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
  type: NodePort
