k8s/ingress-laravel.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laravel-ingress
  namespace: laravel-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: eklxpartners.ekl.tn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: laravel-nginx
                port:
                  number: 80
